# micronaut

./: Cargo.toml  README.md  research.md
docs/: ast.md  examples.md  overview.md  syntax.md  winnow_hints.md
examples/: builder.rs  render.rs
src/: lib.rs
src/micron/: ast.rs  mod.rs  parser.rs  render.rs
src/micronaut/: ast.rs  browser.rs  builder.rs  mod.rs  parser.rs  ratatui.rs  serialize.rs  types.rs  widget.rs
tests/: example.mu
