[package]
name = "micron"
version = "0.1.0"
edition = "2024"

[features]
default = []
ratatui = ["dep:ratatui"]

[dependencies]
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.29", optional = true }
winnow = "0.7"

[lib]
path = "src/lib.rs"

[[example]]
name = "render"
required-features = ["ratatui", "crossterm"]
