[package]
name = "micronaut"
version = "0.1.0"
edition = "2024"

[features]
default = []
ratatui = ["dep:ratatui"]

[dependencies]
ratatui = { version = "0.30.0", optional = true }
winnow = "0.7"

[dev-dependencies]
crossterm = "0.29"

[lib]
path = "src/lib.rs"

[[example]]
name = "render"
required-features = ["ratatui"]
