[package]
name = "micronaut"
version = "0.1.0"
edition = "2024"

[features]
default = []
browser = []
ratatui = ["browser", "dep:ratatui", "dep:unicode-width", "dep:unicode-segmentation"]

[dependencies]
ratatui = { version = "0.30.0", optional = true }
unicode-width = { version = "0.2", optional = true }
unicode-segmentation = { version = "1.11", optional = true }
winnow = "0.7"

[dev-dependencies]
crossterm = "0.29"
notify = "8.2.0"
tui-input = "0.12"

[lib]
path = "src/lib.rs"

[[example]]
name = "render"
required-features = ["ratatui"]

[[example]]
name = "builder"
